# openfx-test

./: .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MugPlugin.ofx  README.md  build.sh  docker-build.sh  entrypoint.sh  main.cc  main.cpp  toolchain.cmake
docker/: Dockerfile  entrypoint.sh
scripts/: docker-build.sh  rebuild_docker_image.sh  setup-editor.sh
src/: main.cc
